2010-02-16  Chandrashekhar B <bchandra@secpod.com>

	* misc/pcap.c (v6_routethrough):
	Get IPv4/IPv6 routes according to the target IP, whether v4 or v6
	and Try connectsockettechnique if procroutetechnique failed. This
	is to resolve the issues reported with this_host() function.

2010-02-15  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* nasl/CMakeLists.txt: Link the standalone nasl interpreter dynamically.
	Move linkage commands to the static nasl library.

	* ChangeLog: Corrected path.

2010-02-15  Stephan Kleine

	* Makefile, base/CMakeLists.txt, hg/Makefile, misc/Makefile,
	nasl/CMakeLists.txt, omp/CMakeLists.txt:
	Fix build order and some linking issues to fix builds on Mandriva

2010-02-11  Matthew Mundell <matthew.mundell@intevation.de>

	* omp/openvas_server.h: Add extern for C++.

2010-02-11  Matthew Mundell <matthew.mundell@intevation.de>

	* omp/omp.h, omp/xml.h: Add externs for C++.

2010-02-04  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* misc/openvas_logging.c (openvas_syslog_func): Applying patch from
	Stephan Kleine, fixing bug #1272 (http://bugs.openvas.org/1272).

2010-02-04  Michael Wiegand <michael.wiegand@intevation.de>

	Post-release version bump.

	* VERSION: Set to 3.0.4.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2010-02-04  Michael Wiegand <michael.wiegand@intevation.de>

	* MANIFEST: Added missing files.

2010-02-04  Michael Wiegand <michael.wiegand@intevation.de>

	Preparing the openvas-libraries 3.0.3 release.

	* CHANGES: Updated.

	* VERSION: Set to 3.0.3.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2010-02-04  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* misc/openvas_auth.c (openvas_authenticate): Minor doc, added TODO
	about possible memleak.

2010-01-29  Chandrashekhar B <bchandra@secpod.com>

	* nasl/nasl_crypto.c (nasl_ntlmv1_hash, nasl_lm_owf_gen)
	(nasl_ntv2_owf_gen, nasl_ntlmv2_hash): Addressed compiler warnings.
